templates/k8s/consul/gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: gatewayclass
spec:
  controllerName: "consul.hashicorp.com/gateway-controller"
  parametersRef:
    group: consul.hashicorp.com
    kind: GatewayClassConfig
    name: gateway-class-config
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
spec:
  gatewayClassName: gatewayclass
  listeners:
  - protocol: HTTP
    port: 9001
    name: listener-one
